--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.12.1",
+    "katex": "^0.16.22",
     "particles.js": "^2.0.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0"
+    "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
